Add async routes with routes config object

--- a/package.json
+++ b/package.json
@@ -54,5 +54,10 @@
   "repository": {
     "type": "git",
     "url": ""
+  },
+  "standard": {
+    "ignore": [
+      "/public/*.bundle.js"
+    ]
   }
 }
